<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSatu"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".FragmentDua">

    <TextView
        android:text="@string/move_detected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_marginTop="@dimen/bottom_margin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/full_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:hint="@string/choose_snacks_text"
        app:startIconDrawable="@drawable/ic_baseline_fastfood_24">
        <AutoCompleteTextView
            android:id="@+id/item_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/bottom_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="171dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/back_text"
            android:textColor="@color/colorBlack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Done"
            android:layout_width="171dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/done_text"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</LinearLayout>